--- a/bridgehand.glade
+++ b/bridgehand.glade
@@ -124,6 +124,73 @@
 		  </child>
 
 		  <child>
+		    <widget class="GtkMenuItem" id="flip1">
+		      <property name="visible">True</property>
+		      <property name="label" translatable="yes">_Flip</property>
+		      <property name="use_underline">True</property>
+
+		      <child>
+			<widget class="GtkMenu" id="flip1_menu">
+
+			  <child>
+			    <widget class="GtkMenuItem" id="ew1">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">E-W</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_ew1_activate" last_modification_time="Sat, 13 Oct 2007 17:55:14 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkMenuItem" id="ns1">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">N-S</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_ns1_activate" last_modification_time="Sat, 13 Oct 2007 17:55:14 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkMenuItem" id="nw1">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">N-W</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_nw1_activate" last_modification_time="Sat, 13 Oct 2007 17:55:14 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkMenuItem" id="ne1">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">N-E</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_ne1_activate" last_modification_time="Sat, 13 Oct 2007 17:55:14 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkMenuItem" id="sw1">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">S-W</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_sw1_activate" last_modification_time="Sat, 13 Oct 2007 17:55:14 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkMenuItem" id="se1">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">S-E</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_se1_activate" last_modification_time="Sat, 13 Oct 2007 17:55:14 GMT"/>
+			    </widget>
+			  </child>
+			</widget>
+		      </child>
+		    </widget>
+		  </child>
+
+		  <child>
 		    <widget class="GtkMenuItem" id="dealer1">
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_Dealer</property>
@@ -137,7 +204,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_West</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <signal name="activate" handler="on_dealer_west1_activate" last_modification_time="Wed, 13 Jun 2007 21:59:48 GMT"/>
 			    </widget>
 			  </child>
@@ -147,7 +214,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_North</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">dealer_west1</property>
 			      <signal name="activate" handler="on_dealer_north1_activate" last_modification_time="Wed, 13 Jun 2007 21:59:48 GMT"/>
 			    </widget>
@@ -158,7 +225,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_East</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">dealer_west1</property>
 			      <signal name="activate" handler="on_dealer_east1_activate" last_modification_time="Wed, 13 Jun 2007 21:59:48 GMT"/>
 			    </widget>
@@ -212,7 +279,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_West</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
+		      <property name="active">True</property>
 		      <signal name="activate" handler="on_declarer_west1_activate" last_modification_time="Sat, 03 Feb 2007 20:43:59 GMT"/>
 		    </widget>
 		  </child>
@@ -222,7 +289,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_North</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
+		      <property name="active">True</property>
 		      <property name="group">declarer_west1</property>
 		      <signal name="activate" handler="on_declarer_north1_activate" last_modification_time="Sat, 03 Feb 2007 20:43:59 GMT"/>
 		    </widget>
@@ -233,7 +300,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">_East</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
+		      <property name="active">True</property>
 		      <property name="group">declarer_west1</property>
 		      <signal name="activate" handler="on_declarer_east1_activate" last_modification_time="Sat, 03 Feb 2007 20:43:59 GMT"/>
 		    </widget>
@@ -261,7 +328,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">No _Trump</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
+		      <property name="active">True</property>
 		      <signal name="activate" handler="on_contract_no_trump1_activate" last_modification_time="Sat, 03 Feb 2007 20:46:09 GMT"/>
 		    </widget>
 		  </child>
@@ -271,7 +338,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">♠ S_pades</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
+		      <property name="active">True</property>
 		      <property name="group">contract_no_trump1</property>
 		      <signal name="activate" handler="on_contract_spades1_activate" last_modification_time="Sat, 03 Feb 2007 20:46:09 GMT"/>
 		    </widget>
@@ -282,7 +349,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">♥ _Hearts</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
+		      <property name="active">True</property>
 		      <property name="group">contract_no_trump1</property>
 		      <signal name="activate" handler="on_contract_hearts1_activate" last_modification_time="Sat, 03 Feb 2007 20:46:09 GMT"/>
 		    </widget>
@@ -293,7 +360,7 @@
 		      <property name="visible">True</property>
 		      <property name="label" translatable="yes">♦ _Diamonds</property>
 		      <property name="use_underline">True</property>
-		      <property name="active">False</property>
+		      <property name="active">True</property>
 		      <property name="group">contract_no_trump1</property>
 		      <signal name="activate" handler="on_contract_diamonds1_activate" last_modification_time="Sat, 03 Feb 2007 20:46:09 GMT"/>
 		    </widget>
@@ -330,7 +397,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_1</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <signal name="activate" handler="on_level1_activate" last_modification_time="Sat, 03 Feb 2007 20:47:32 GMT"/>
 			    </widget>
 			  </child>
@@ -340,7 +407,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_2</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">level1</property>
 			      <signal name="activate" handler="on_level2_activate" last_modification_time="Sat, 03 Feb 2007 20:47:32 GMT"/>
 			    </widget>
@@ -351,7 +418,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_3</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">level1</property>
 			      <signal name="activate" handler="on_level3_activate" last_modification_time="Sat, 03 Feb 2007 20:47:32 GMT"/>
 			    </widget>
@@ -362,7 +429,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_4</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">level1</property>
 			      <signal name="activate" handler="on_level4_activate" last_modification_time="Sat, 03 Feb 2007 20:47:32 GMT"/>
 			    </widget>
@@ -373,7 +440,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_5</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">level1</property>
 			      <signal name="activate" handler="on_level5_activate" last_modification_time="Sat, 03 Feb 2007 20:47:32 GMT"/>
 			    </widget>
@@ -384,7 +451,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_6</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">level1</property>
 			      <signal name="activate" handler="on_level6_activate" last_modification_time="Sat, 03 Feb 2007 20:47:32 GMT"/>
 			    </widget>
@@ -412,7 +479,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_No double</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <signal name="activate" handler="on_level_doubled0_activate" last_modification_time="Wed, 13 Jun 2007 21:46:31 GMT"/>
 			    </widget>
 			  </child>
@@ -422,7 +489,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">X _Doubled</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">level_doubled0</property>
 			      <signal name="activate" handler="on_level_doubled1_activate" last_modification_time="Sat, 03 Feb 2007 20:56:20 GMT"/>
 			    </widget>
@@ -457,7 +524,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">N_one</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <signal name="activate" handler="on_vuln_none_activate" last_modification_time="Sat, 17 Feb 2007 00:50:04 GMT"/>
 			    </widget>
 			  </child>
@@ -467,7 +534,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_North-South</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">vuln_none</property>
 			      <signal name="activate" handler="on_vuln_ns_activate" last_modification_time="Sat, 17 Feb 2007 00:50:04 GMT"/>
 			    </widget>
@@ -478,7 +545,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_East-West</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">vuln_none</property>
 			      <signal name="activate" handler="on_vuln_ew_activate" last_modification_time="Sat, 17 Feb 2007 00:50:04 GMT"/>
 			    </widget>
@@ -556,7 +623,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">North-South</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <signal name="activate" handler="on_pos_north_south_activate" last_modification_time="Sun, 18 Feb 2007 18:04:00 GMT"/>
 			    </widget>
 			  </child>
@@ -566,7 +633,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">Declarer</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">pos_north_south</property>
 			      <signal name="activate" handler="on_pos_declarer_activate" last_modification_time="Sun, 18 Feb 2007 18:04:00 GMT"/>
 			    </widget>
@@ -729,7 +796,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">East-West</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <signal name="activate" handler="on_handseastwest1_activate" last_modification_time="Sat, 06 Oct 2007 17:30:47 GMT"/>
 			    </widget>
 			  </child>
@@ -739,7 +806,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">North-South</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">handseastwest1</property>
 			      <signal name="activate" handler="on_handsnorthsouth1_activate" last_modification_time="Sat, 06 Oct 2007 17:30:47 GMT"/>
 			    </widget>
@@ -774,7 +841,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">No one</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <signal name="activate" handler="on_ddno_one1_activate" last_modification_time="Sat, 06 Oct 2007 16:26:32 GMT"/>
 			    </widget>
 			  </child>
@@ -784,7 +851,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">East-West</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">ddno_one1</property>
 			      <signal name="activate" handler="on_ddeastwest1_activate" last_modification_time="Sat, 06 Oct 2007 16:26:32 GMT"/>
 			    </widget>
@@ -795,7 +862,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">North-South</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">ddno_one1</property>
 			      <signal name="activate" handler="on_ddnorthsouth1_activate" last_modification_time="Sat, 06 Oct 2007 16:26:32 GMT"/>
 			    </widget>
@@ -830,7 +897,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">_Text</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <signal name="activate" handler="on_style_text_activate" last_modification_time="Mon, 09 Jul 2007 20:12:39 GMT"/>
 			    </widget>
 			  </child>
@@ -887,7 +954,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">East-West</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">autonone1</property>
 			      <signal name="activate" handler="on_autoeastwest1_activate" last_modification_time="Sat, 06 Oct 2007 17:56:47 GMT"/>
 			    </widget>
@@ -898,7 +965,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">North-South</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">autonone1</property>
 			      <signal name="activate" handler="on_autonorthsouth1_activate" last_modification_time="Sat, 06 Oct 2007 17:56:47 GMT"/>
 			    </widget>
@@ -909,7 +976,7 @@
 			      <property name="visible">True</property>
 			      <property name="label" translatable="yes">All</property>
 			      <property name="use_underline">True</property>
-			      <property name="active">False</property>
+			      <property name="active">True</property>
 			      <property name="group">autonone1</property>
 			      <signal name="activate" handler="on_autoall1_activate" last_modification_time="Sat, 06 Oct 2007 17:56:47 GMT"/>
 			    </widget>
