--- a/bridgehand.glade
+++ b/bridgehand.glade
@@ -1590,19 +1590,20 @@ EW: 0</property>
     <widget class="GtkScrolledWindow" id="scrolledwindow1">
       <property name="visible">True</property>
       <property name="can_focus">True</property>
-      <property name="hscrollbar_policy">GTK_POLICY_ALWAYS</property>
-      <property name="vscrollbar_policy">GTK_POLICY_ALWAYS</property>
+      <property name="hscrollbar_policy">GTK_POLICY_NEVER</property>
+      <property name="vscrollbar_policy">GTK_POLICY_AUTOMATIC</property>
       <property name="shadow_type">GTK_SHADOW_IN</property>
       <property name="window_placement">GTK_CORNER_TOP_LEFT</property>
 
       <child>
 	<widget class="GtkTreeView" id="treeview_bid">
+	  <property name="width_request">141</property>
+	  <property name="height_request">200</property>
 	  <property name="visible">True</property>
-	  <property name="can_focus">True</property>
 	  <property name="headers_visible">True</property>
 	  <property name="rules_hint">False</property>
 	  <property name="reorderable">False</property>
-	  <property name="enable_search">True</property>
+	  <property name="enable_search">False</property>
 	  <property name="fixed_height_mode">False</property>
 	  <property name="hover_selection">False</property>
 	  <property name="hover_expand">False</property>
